--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <ul class="sidebar__list">
           <li>
             <a href="go" rel="nofollow">
-              <span><img src="assets/images/m5.png" alt="fr"  loading="lazy"/></span>
+              <span><img src="assets/images/m5.webp" alt="fr"  loading="lazy"/></span>
               <span>Casino</span>
             </a>
           </li>
           <li>
             <a href="go" rel="nofollow">
-              <span><img src="assets/images/m6.png" alt="fr"  loading="lazy"/></span>
+              <span><img src="assets/images/m6.webp" alt="fr"  loading="lazy"/></span>
               <span>Live Casino</span>
             </a>
           </li>
           <li>
             <a href="go" rel="nofollow">
-              <span><img src="assets/images/m7.png" alt="fr"  loading="lazy"/></span>
+              <span><img src="assets/images/m7.webp" alt="fr"  loading="lazy"/></span>
               <span>Jackpots</span>
             </a>
           </li>
@@ -196,61 +196,61 @@
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t2.png" alt="banner1920" loading="lazy"></span>                          
+                    <span><img src="assets/images/t2.webp" alt="banner1920" loading="lazy"></span>                          
                     <span>Top</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t3.png" alt="banner1920" loading="lazy"></span>                     
+                    <span><img src="assets/images/t3.webp" alt="banner1920" loading="lazy"></span>                     
                     <span>Nouveau</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t4.png" alt="banner1920" loading="lazy"></span>                                     
+                    <span><img src="assets/images/t4.webp" alt="banner1920" loading="lazy"></span>                                     
                     <span>Populaire</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t5.png" alt="banner1920" loading="lazy"></span>                       
+                    <span><img src="assets/images/t5.webp" alt="banner1920" loading="lazy"></span>                       
                     <span>Exclusif</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t6.png" alt="banner1920" loading="lazy"></span>              
+                    <span><img src="assets/images/t6.webp" alt="banner1920" loading="lazy"></span>              
                     <span>Meilleur live casino</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t7.png" alt="banner1920" loading="lazy"></span>                          
+                    <span><img src="assets/images/t7.webp" alt="banner1920" loading="lazy"></span>                          
                     <span>Roulette</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t8.png" alt="banner1920" loading="lazy"></span>                  
+                    <span><img src="assets/images/t8.webp" alt="banner1920" loading="lazy"></span>                  
                     <span>Game Shows</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t9.png" alt="banner1920" loading="lazy"></span>                  
+                    <span><img src="assets/images/t9.webp" alt="banner1920" loading="lazy"></span>                  
                     <span>Blackjack</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t10.png" alt="banner1920" loading="lazy"></span>               
+                    <span><img src="assets/images/t10.webp" alt="banner1920" loading="lazy"></span>               
                     <span>Jackpots Hot</span>
                   </a>
                 </li>
                 <li>
                   <a href="go" rel="nofollow">
-                    <span><img src="assets/images/t11.png" alt="banner1920" loading="lazy"></span>               
+                    <span><img src="assets/images/t11.webp" alt="banner1920" loading="lazy"></span>               
                     <span>Machines à sous</span>
                   </a>
                 </li>
@@ -691,13 +691,13 @@
           </div>
           <div class="footer__pay">
             <a href="go" rel="nofollow">
-              <img src="assets/images/visa.png" alt="visa" loading="lazy">
+              <img src="assets/images/visa.webp" alt="visa" loading="lazy">
             </a>
             <a href="go" rel="nofollow">
-              <img src="assets/images/mastercard.png" alt="mastercard" loading="lazy">
+              <img src="assets/images/mastercard.webp" alt="mastercard" loading="lazy">
             </a>
             <a href="go" rel="nofollow">
-              <img src="assets/images/interac.png" alt="interac" loading="lazy">
+              <img src="assets/images/interac.webp" alt="interac" loading="lazy">
             </a>
             <a href="go" rel="nofollow">
               <span> Plus </span>
@@ -705,7 +705,7 @@
             </a>
           </div>
           <div class="footer__media">
-            <img src="assets/images/18+.png" alt="18+" loading="lazy">
+            <img src="assets/images/18+.webp" alt="18+" loading="lazy">
           </div>
           <div class="footer__copyright">
             <p>Gambling can be addictive. Play responsibly. Robocat.com only accepts customers over 18 years of age</p>
