--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">  
-</head>
+
+    <link rel="preload" as="image" href="assets/images/banner-mob.webp" type="image/webp">
+
 <body>
   <header>
     <div class="container">
@@ -178,7 +180,7 @@
               <div class="banner__img">
                 <picture>
                   <source srcset="assets/images/banner-mob.webp" media="(max-width: 767px)">
-                  <img src="assets/images/banner.webp" alt="banner" fetchpriority="high">
+                  <img src="assets/images/banner.webp" alt="banner" fetchpriority="high" width="1200" height="600">
                 </picture>
               </div>
             </div>
