--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
           <div class="container">
             <div class="banner">
               <a class="banner__content" href="go" rel="nofollow">
-                <div class="banner__content__arrow arrow--left"><svg-icon-sprite _ngcontent-ng-c3058309638="" aria-hidden="true" src="arrow-left" width="16" height="16" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="16" height="16"><!----><use _ngcontent-ng-c2813361619="" xlink:href="./assets/sprite.svg#arrow-left"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite></div>
-                <div class="banner__content__arrow arrow--right"><svg-icon-sprite _ngcontent-ng-c3058309638="" aria-hidden="true" src="arrow-right" width="16" height="16" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="16" height="16"><!----><use _ngcontent-ng-c2813361619="" xlink:href="./assets/sprite.svg#arrow-right"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite></div>
+                
                 <p>Bonus de bienvenue du casino</p>
                 <p>
                   <span>100%</span><span> jusqu’à</span><span> €500</span><span> + 200 FS</span>
@@ -168,16 +167,12 @@
                 <p>
                   <span>S'inscrire maintenant</span>
                 </p>
-                <div class="banner__content__dots">
-                  <span></span>
-                  <span></span>
-                </div>
-                <div class="banner__content__gr"></div>
+               
               </a>
               <div class="banner__img">
                 <picture>
                   <source srcset="assets/images/banner-mob.webp" media="(max-width: 767px)">
-                  <img src="assets/images/banner.webp" alt="banner" fetchpriority="high" width="1200" height="600">
+                  <img src="assets/images/banner.webp" alt="banner" fetchpriority="high">
                 </picture>
               </div>
             </div>
