--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
           <div class="container">
             <div class="banner">
               <a class="banner__content" href="go" rel="nofollow">
-                
+                <div class="banner__content__arrow arrow--left"></div>
+                <div class="banner__content__arrow arrow--right"></div>
                 <p>Bonus de bienvenue du casino</p>
                 <p>
                   <span>100%</span><span> jusqu’à</span><span> €500</span><span> + 200 FS</span>
@@ -167,7 +168,11 @@
                 <p>
                   <span>S'inscrire maintenant</span>
                 </p>
-               
+                <div class="banner__content__dots">
+                  <!-- <span></span>
+                  <span></span> -->
+                </div>
+                <div class="banner__content__gr"></div>
               </a>
               <div class="banner__img">
                 <picture>
