--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
                 </div>
                 <div class="banner__content__gr"></div>
               </a>
-              <div class="banner__img">
+              <!-- <div class="banner__img">
                 <picture>
                   <source srcset="assets/images/banner-mob.webp" media="(max-width: 767px)">
                   <img src="assets/images/banner.webp" alt="banner" fetchpriority="high">
                 </picture>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
