--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               </a>
               <div class="banner__img">
                 <picture>
-                  <source srcset="assets/images/banner-mob.webp" media="(max-width: 767px)">
+                  <!-- <source srcset="assets/images/banner-mob.webp" media="(max-width: 767px)"> -->
                   <img src="assets/images/banner.webp" alt="banner" fetchpriority="high">
                 </picture>
               </div>
