--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
               </a>
               <div class="banner__img">
                 <picture>
-                  <!-- <source srcset="assets/images/banner-mob.webp" media="(max-width: 767px)"> -->
-                  <img src="assets/images/banner.webp" alt="banner" fetchpriority="high">
+                  <source srcset="assets/images/banner-mob.webp" media="(max-width: 767px)">
+                  <source srcset="assets/images/banner.webp" media="(min-width: 768px)">
+                  <img src="assets/images/banner-mob.webp" alt="banner" fetchpriority="high">
                 </picture>
               </div>
             </div>
